@@ -1,6 +1,6 @@
 {
-  "timestamp" : "2022-03-28T16:25:28Z",
-  "count" : 4,
+  "timestamp" : "2022-04-11T08:21:52Z",
+  "count" : 2,
   "count_minmax" : [ 2, 4 ],
   "count_prev_day_inc" : 4,
   "count_prev_day_dec" : 0,
